--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
         <input type="text" id="jsonInput" placeholder="Enter JSON string">
         <button onclick="loadData()">Input Data</button>
         <button onclick="saveToLocal()">Save Data</button>
+        <button onclick="copyCard()">Copy Data</button>
         <button onclick="clearLocal()">Clear Data</button>
     </div>
 
@@ -426,6 +427,62 @@
             cardData[index] = updatedCard;
             saveToLocal();
             renderCards();
+        }
+    }
+
+    function copyCard() {
+        const cardId = document.getElementById('editForm').dataset.id;
+        const tempCardData = cardData.map(card => {
+            return {
+                id: card.id,
+                league: card.league,
+                time: card.time,
+                date: card.date,
+                home_name: card.home_name,
+                home_img: card.home_img,
+                away_name: card.away_name,
+                away_img: card.away_img
+            };
+        });
+
+        const updatedStyleTwoCard = {
+            id: cardId,
+            league: document.getElementById('editLeague').value,
+            time: document.getElementById('editTime').value,
+            date: document.getElementById('editDate').value,
+            home_name: document.getElementById('editHome').value,
+            home_img: document.getElementById('editHomeImg').value,
+            away_name: document.getElementById('editAway').value,
+            away_img: document.getElementById('editAwayImg').value
+        };
+
+        const index = tempCardData.findIndex(card => card.id === cardId);
+        if (index !== -1) {
+            tempCardData[index] = updatedStyleTwoCard;
+            const script = document.createElement('script');
+            const jsonString = JSON.stringify(tempCardData, null, 2); // Pretty-print with 4-space indentation
+            // Output the final data structure in the required format
+            //const test = `var json_data = \`${jsonString}\`;`;
+            const test = `var match_data = ${jsonString};`;
+            script.textContent = test;
+            const clipboardItem = new ClipboardItem({
+                "text/plain": new Blob(
+                    [script.outerHTML],
+                    {type: "text/plain"}
+                ),
+                "text/html": new Blob(
+                    [script.outerHTML],
+                    {type: "text/html"}
+                ),
+            });
+            navigator.clipboard.write([clipboardItem]);
+            try {
+                localStorage.setItem(LOCAL_STORAGE_KEY, script.outerHTML.trim());
+                console.log('Data has been saved locally!');
+            } catch (err) {
+                console.error('Error saving data to localStorage:', err);
+            }
+            console.log(script);
         }
     }
 
