--- a/index.html
+++ b/index.html
@@ -4,156 +4,190 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Panel</title>
+    <!-- <link rel="stylesheet" href="styles.css"> -->
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f9;
-            margin: 0;
-            padding: 0;
-        }
-
-        .container {
-            display: flex;
-            flex-wrap: wrap;
-            padding: 10px;
-        }
-
-        .input-container {
-            width: 100%;
-            margin-bottom: 20px;
-            text-align: center;
-        }
-
-        .input-container input {
-            width: 80%;
-            padding: 10px;
-            margin: 5px 0;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-
-        .input-container button {
-            padding: 10px 20px;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        .input-container button:hover {
-            background-color: #45a049;
-        }
-
-        .edit-container, .card-container {
-            margin: 20px 10px;
-        }
-
-        .edit-container {
-            width: 57%;
-        }
-
-        .card-container {
-            width: 37%;
-            display: flex;
-            flex-wrap: wrap;
-            gap: 10px;
-        }
-
-        .card {
-            width: 95%;
-            background: #fff;
-            border: 1px solid #ddd;
-            padding: 10px;
-            margin-bottom: 10px;
-            border-radius: 5px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            cursor: pointer;
-        }
-
-        .card img {
-            width: 50px;
-            height: 50px;
-            margin-right: 10px;
-        }
-
-        .card-title {
-            font-size: 18px;
-            font-weight: bold;
-        }
-
-        .card-content {
-            font-size: 14px;
-            color: #555;
-        }
-
-        .form-group {
-            display: flex;
-            align-items: center;
-            margin-bottom: 15px;
-        }
-
-        .form-group label {
-            width: 20%;
-            padding-right: 10px;
-            text-align: right;
-            font-size: 10px;
-        }
-
-        .form-group input {
-            width: 80%;
-            padding: 8px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-        }
-
-        .form-actions {
-            display: flex;
-            justify-content: space-between;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-            background-color: #f4f4f9;
-            padding: 10px 0;
-            box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
-        }
-
-        .form-actions button {
-            padding: 10px 15px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            width: 40%;
-            height: 40px;
-            margin: auto;
-        }
-
-        .form-actions .update {
-            background-color: #4CAF50;
-            color: white;
-        }
-
-        .form-actions .delete {
-            background-color: #f44336;
-            color: white;
-        }
-
-        .edit-container {
-            margin: 20px 10px;
-            padding-bottom: 50px; /* Add space at the bottom for the sticky form-actions */
-        }
-
-        /* Responsive Design */
-        @media (max-width: 600px) {
-            .edit-container, .card-container {
-                width: 100%;
-            }
-
-            .card-container {
-                display: block;
-            }
-        }
-    </style>
+      body {
+          font-family: Arial, sans-serif;
+          background-color: #f4f4f9;
+          margin: 0;
+          padding: 0;
+      }
+  
+      .container {
+          display: flex;
+          flex-wrap: wrap;
+          padding: 10px;
+          gap: 20px;
+      }
+  
+      .input-container {
+          width: 100%;
+          margin-bottom: 20px;
+          text-align: center;
+      }
+  
+      .input-container input {
+          width: 80%;
+          padding: 12px;
+          margin: 10px 0;
+          border: 1px solid #ccc;
+          border-radius: 8px;
+          font-size: 16px;
+      }
+  
+      .input-container button {
+          padding: 12px 24px;
+          background-color: #4CAF50;
+          color: white;
+          border: none;
+          border-radius: 8px;
+          cursor: pointer;
+          font-size: 16px;
+          margin: 5px;
+          transition: background-color 0.3s ease;
+      }
+  
+      .input-container button:hover {
+          background-color: #45a049;
+      }
+  
+      .card-container {
+          margin: 20px 0;
+      }
+  
+      .edit-container {
+          width: 60%;
+          background: #fff;
+          padding: 20px;
+          border-radius: 8px;
+          box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+      }
+  
+      .card-container {
+          width: 35%;
+          display: flex;
+          flex-direction: column;
+          gap: 15px;
+      }
+  
+      .card {
+          width: 100%;
+          background: #fff;
+          border: 1px solid #ddd;
+          padding: 15px;
+          border-radius: 8px;
+          box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+          cursor: pointer;
+          transition: transform 0.2s ease, box-shadow 0.2s ease;
+      }
+  
+      .card:hover {
+          transform: translateY(-5px);
+          box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+      }
+  
+      .card img {
+          width: 50px;
+          height: 50px;
+          margin-right: 10px;
+          border-radius: 50%;
+      }
+  
+      .card-title {
+          font-size: 18px;
+          font-weight: bold;
+          margin-bottom: 10px;
+      }
+  
+      .card-content {
+          font-size: 14px;
+          color: #555;
+      }
+  
+      .form-group {
+          display: flex;
+          align-items: center;
+          margin-bottom: 15px;
+      }
+  
+      .form-group label {
+          width: 20%;
+          padding-right: 10px;
+          text-align: right;
+          font-size: 14px;
+          color: #333;
+      }
+  
+      .form-group input {
+          width: 80%;
+          padding: 10px;
+          border: 1px solid #ddd;
+          border-radius: 8px;
+          font-size: 14px;
+      }
+  
+      .form-actions {
+          position: fixed;
+          bottom: 0;
+          width: 100%;
+          background-color: #f4f4f9;
+          padding: 15px 0;
+          box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
+      }
+  
+      .form-actions button {
+          padding: 12px 20px;
+          border: none;
+          border-radius: 8px;
+          cursor: pointer;
+          width: 40%;
+          font-size: 16px;
+          transition: background-color 0.3s ease;
+      }
+  
+      .form-actions .update {
+          background-color: #4CAF50;
+          color: white;
+      }
+  
+      .form-actions .update:hover {
+          background-color: #45a049;
+      }
+  
+      .form-actions .delete {
+          background-color: #f44336;
+          color: white;
+      }
+  
+      .form-actions .delete:hover {
+          background-color: #e53935;
+      }
+  
+      /* Responsive Design */
+      @media (max-width: 768px) {
+          .container {
+              flex-direction: column;
+          }
+  
+          .edit-container, .card-container {
+              width: 90%;
+          }
+  
+          .card-container {
+              gap: 10px;
+          }
+  
+          .form-group label {
+              width: 20%;
+              font-size: 10px;
+              font-weight: bold;
+          }
+  
+          .form-group input {
+              width: 80%;
+          }
+      }
+  </style>
 </head>
 <body>
 
@@ -161,9 +195,9 @@
     <!-- Input Section -->
     <div class="input-container">
         <input type="text" id="jsonInput" placeholder="Enter JSON string">
-        <button onclick="loadData()">Input Data</button>
-        <button onclick="saveToLocal()">Save Data</button>
-        <button onclick="copyCard()">Copy Data</button>
+        <button onclick="loadData()">Submit</button>
+        <button onclick="saveToLocal()">Save Data With Links</button>
+        <button onclick="copyCard()">Copy Data No Links</button>
         <button onclick="copyName()">Copy Name</button>
         <button onclick="clearLocal()">Clear Data</button>
     </div>
@@ -334,7 +368,7 @@
                 console.error("Invalid JSON data:", e);
             }
         } else {
-            console.error("No matching script data found!");
+            console.error("Start: No matching script data found!");
         }
     };
 
@@ -351,7 +385,7 @@
                 console.error("Invalid JSON data:", e);
             }
         } else {
-            console.error("No matching script data found!");
+            console.error("Load: No matching script data found!");
         }
     }
 
@@ -462,12 +496,6 @@
             ),
         });
         navigator.clipboard.write([clipboardItem]);
-        try {
-            localStorage.setItem(LOCAL_STORAGE_KEY, script.outerHTML.trim());
-            console.log('Data has been saved locally!');
-        } catch (err) {
-            console.error('Error saving data to localStorage:', err);
-        }
         console.log(script);
     }
     function copyName() {
@@ -507,6 +535,7 @@
         location.reload();
     }
 </script>
+<!-- <script src="script.js"></script> -->
 
 </body>
 </html>
